<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >
	<item
		android:id="@+id/item_start"
		android:icon="@drawable/ic_launcher"
		android:title="@string/button_start" />
	
	<item
		android:id="@+id/item_stop"
		android:icon="@drawable/ic_launcher"
		android:title="@string/button_stop" />
	
	<item
		android:id="@+id/show_today"
		android:icon="@drawable/ic_launcher"
		android:title="@string/button_show_today" />
	
    <item
		android:id="@+id/show_24_hours"
		android:icon="@drawable/ic_launcher"
		android:title="@string/button_show_24_hours" />
    <item
		android:id="@+id/show_all"
		android:icon="@drawable/ic_launcher"
		android:title="@string/button_show_all" />
	
	<item
		android:id="@+id/item_restart"
		android:icon="@drawable/ic_launcher"
		android:title="@string/button_restart" />
</menu>